--- a/my_projects/No.9/index.html
+++ b/my_projects/No.9/index.html
@@ -10,73 +10,85 @@
 
 </head>
 <body>
-  <div class="head">
-    <div class="icon"></div>
-    <div class="navigation">
-      <ul>
-        <li>Home</li>
-        <li>New</li>
-        <li>Popular</li>
-        <li>Trending</li>
-        <li>Categories</li>
-      </ul>
-    </div>
-  </div>
-  <div class="main">
-    <div class="left_part">
-      <div class="main_pic"></div>
-      <div class="main_news">
-        <h1 class="main_title">The Bright Future of Web 3.0?</h1>
-        <div class="main_content">
-          <p>We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the
-            people.
-            But is it really fulfilling its promise?</p>
-          <button>Read more</button>
-        </div>
-        
+  <div class="container">
+    <div class="head">
+      <div class="icon">
+        <img src="./assets/images/logo.svg" alt="" />
+      </div>
+      <div class="navigation">
+        <ul>
+          <li>Home</li>
+          <li>New</li>
+          <li>Popular</li>
+          <li>Trending</li>
+          <li>Categories</li>
+        </ul>
       </div>
     </div>
-    <div class="right_part">
-      <h1>New</h1>
-      <div class="right_content">
-        <div class="side_news">
-          <h2>Hydrogen VS Electric Cars</h2>
-          <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
+    <div class="main">
+      <div class="left_part">
+        <div class="main_pic">
+          <img src="./assets/images/image-web-3-desktop.jpg" alt="" />
         </div>
-        <div class="side_news">
-          <h2>The Downsides of AI Artistry</h2>
-          <p>What are the possible adverse effects of on-demand AI image generation?</p>
+        <div class="main_news">
+          <h1 class="main_title">The Bright<br>Future of<br> Web 3.0?</h1>
+          <div class="main_content">
+            <p>We dive into the next evolution of the web that claims to put the power of the platforms back into the hands
+              of the
+              people.
+              But is it really fulfilling its promise?</p>
+            <button>Read more</button>
+          </div>
         </div>
-        <div class="side_news no-border">
-          <h2>Is VC Funding Drying Up?</h2>
-          <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
+      </div>
+      <div class="right_part">
+        <h1>New</h1>
+        <div class="right_content">
+          <div class="side_news">
+            <h2>Hydrogen VS Electric Cars</h2>
+            <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
+          </div>
+          <div class="side_news">
+            <h2>The Downsides of AI Artistry</h2>
+            <p>What are the possible adverse effects of on-demand AI image generation?</p>
+          </div>
+          <div class="side_news no-border">
+            <h2>Is VC Funding Drying Up?</h2>
+            <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <div class="foot">
-    <div class="foot_news">
-      <div class="foot_pic one"></div>
-      <div class="foot_news_content">
-        <h2>01</h2>
-        <h6>Reviving Retro PCs</h6>
-        <p>What happens when old PCs are given modern upgrades?</p>
+    <div class="foot">
+      <div class="foot_news">
+        <div class="foot_pic one">
+          <img src="/assets/images/image-retro-pcs.jpg" alt="" />
+        </div>
+        <div class="foot_news_content">
+          <h2>01</h2>
+          <h6>Reviving Retro PCs</h6>
+          <p>What happens when old PCs are given modern upgrades?</p>
+        </div>
       </div>
-    </div>
-    <div class="foot_news">
-      <div class="foot_pic two"></div>
-      <div class="foot_news_content">
-        <h2>02</h2>
-        <h6>Top 10 Laptops of 2022</h6>
-        <p>Our best picks for various needs and budgets.</p>
+      <div class="foot_news">
+        <div class="foot_pic two">
+          <img src="./assets/images/image-top-laptops.jpg" alt="" />
+        </div>
+        <div class="foot_news_content">
+          <h2>02</h2>
+          <h6>Top 10 Laptops of 2022</h6>
+          <p>Our best picks for various needs and budgets.</p>
+        </div>
       </div>
-    </div>
-    <div class="foot_news">
-      <div class="foot_pic three"></div>
-      <div class="foot_news_content">
-        <h2>03</h2>
-        <h6>The Growth of Gaming</h6>
-        <p>How the pandemic has sparked fresh opportunities.</p>
+      <div class="foot_news">
+        <div class="foot_pic three">
+          <img src="./assets/images/image-gaming-growth.jpg" alt="" />
+        </div>
+        <div class="foot_news_content">
+          <h2>03</h2>
+          <h6>The Growth of Gaming</h6>
+          <p>How the pandemic has sparked fresh opportunities.</p>
+        </div>
       </div>
     </div>
   </div>
